# origins-of-the-fittest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
notebooks/: README.md  df_simulation_tau_pi_ba1024mu1e-3.parquet  example_basic_simulation.ipynb  example_dmp_approximation_ba1024.ipynb  example_shortest_path_approximation_ba1024.ipynb
origins_of_the_fittest/: __init__.py
origins_of_the_fittest/approximation/: distance_message_passing.py  distance_shortest_path.py  fitness_variance_heterogeneous.py  fitness_variance_homogeneous.py  fitness_variance_shared.py  matrix_utils.py  pi_computation.py  tau_h_integrals.py
origins_of_the_fittest/data/: barabasi_albert_32_seed0.parquet  barabasi_albert_Meq2N_1024.parquet  barabasi_albert_Meq2N_128.parquet  barabasi_albert_Meq2N_131072.parquet  barabasi_albert_Meq2N_16.parquet  barabasi_albert_Meq2N_16384.parquet  barabasi_albert_Meq2N_2048.parquet  barabasi_albert_Meq2N_256.parquet  barabasi_albert_Meq2N_262144.parquet  barabasi_albert_Meq2N_32.parquet  barabasi_albert_Meq2N_32768.parquet  barabasi_albert_Meq2N_4096.parquet  barabasi_albert_Meq2N_512.parquet  barabasi_albert_Meq2N_64.parquet  barabasi_albert_Meq2N_65536.parquet  barabasi_albert_Meq2N_8192.parquet  barabasi_albert_Meq4N_1024.parquet  barabasi_albert_Meq4N_1024_seed1.parquet  barabasi_albert_Meq4N_1024_seed2.parquet  barabasi_albert_Meq4N_1024_seed3.parquet  barabasi_albert_Meq4N_1024_seed4.parquet  barabasi_albert_Meq4N_128.parquet  (+82 more)
scripts/: generate_reference_simulation.py
tests/: README.md  conftest.py
(+52 files in other folders)
